fix(cancelOrder) rename cancelOrder as removeOrder
