# lib/grpc/GrpcServer.ts
@@ -17,7 +17,7 @@ class GrpcServer {
     this.server.addService(XudService, {
       addCurrency: grpcService.addCurrency,
       addPair: grpcService.addPair,
-      cancelOrder: grpcService.cancelOrder,
+      removeOrder: grpcService.removeOrder,
       channelBalance: grpcService.channelBalance,
       connect: grpcService.connect,
       disconnect: grpcService.disconnect,
